<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        layout="@layout/layout_commen_title"
        />


    <LinearLayout
        android:id="@+id/informaiton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_top"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"/>

        <EditText
            android:id="@+id/cell_no"
            style="@style/EditTextStyle"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_frame_yellow_1dp"
            android:drawableLeft="@mipmap/cell"
            android:drawablePadding="16dp"
            android:hint="@string/common_login_account_tip"
            android:imeOptions="actionNext"
            android:inputType="text|phone"
            />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_frame_yellow_1dp"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="16dp"
            android:hint="@string/common_password_format_tip"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:text="@string/common_register_right_now_tip"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_size_14sp"/>

            <Button
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:text="@string/common_forget_password"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_size_14sp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/login"
            style="@style/ButtonStyle"
            android:layout_marginTop="50dp"
            android:text="@string/common_login_right_now"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>